# Entreprise-AI

./: .env  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
backend/: __init__.py  requirements.txt  test.db
backend/data/: sku_catalog.json
backend/output/: proposal_draft.txt
backend/product_vectorstore/: chroma.sqlite3
backend/src/: app.py  auth.py  database.py  email_handler.py  executive_layer.py  models.py  tender_scraper.py  utils.py
backend/src/input_handler/: tender_scraper.py
backend/src/input_handlers/: email_handler.py
backend/workflow/agents/: Technical_Agent.py  pwin.py  rfp_aggregator.py  risk_and_compilance.py
backend/workflow/competitor/: competitor_analysis.py
backend/workflow/competitor analysis workflow/: competitor_analysis.py
backend/workflow/config/: settings.py
backend/workflow/utils/: logger.py
ey_frontend/rfp-nexus-ai/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: audit-log-terminal.tsx  brain-chatbot.tsx  confidence-gauge.tsx  deadline-heatmap.tsx  floating-robot.tsx  hero-sphere.tsx  live-metrics-ticker.tsx  negotiation-chat.tsx  rfp-card.tsx  trust-layer-marquee.tsx  vendor-comparison.tsx  workflow-progress.tsx
frontend/lib/: api.ts
src/: __init__.py
src/agents/: Technical_Agent.py  dynamic_pricing_agent.py  pwin.py  rfp_aggregator.py  risk_and_compilance.py
src/schemas/: api_schemas.py
src/utils/: logger.py
tests/: test_pipeline.py
(+30 files in other folders)
